unpackaged/main/default/objects/ETT_Trade_Reference__c/ETT_Trade_Reference__c.object-meta.xml
<CustomObject>
    <label>Trade Reference</label>
    <nameField>
        <displayFormat>TRN-{0000}</displayFormat>
        <label>Trade Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Reference</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>