unpackaged/main/default/objects/ETT_Trade_Reference__c/fields/ETT_Account__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ET Customer account code</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trade Reference</relationshipLabel>
    <relationshipName>Trade_Reference</relationshipName>
    <type>Lookup</type>
</CustomField>