unpackaged/main/default/objects/ETT_Trade_Reference__c/fields/ETT_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>ETT_Credit_Limit__c</fullName>
    <description>Customer&#39;s credit limit for supplier</description>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>