unpackaged/main/default/objects/ETT_Trade_Reference__c/fields/ETT_Supplier_Name_Details__c.field-meta.xml
<CustomField>
    <fullName>ETT_Supplier_Name_Details__c</fullName>
    <description>ET Customer&#39;s supplier Name and details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>